--- a/UI/ColorVision.UI/PropertyEditor/AvalonEditWindow.xaml
+++ b/UI/ColorVision.UI/PropertyEditor/AvalonEditWindow.xaml
@@ -2,83 +2,103 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-	Title="Edit" Height="500" Width="700">
-	<DockPanel>
-		<ToolBar DockPanel.Dock="Top">
-			<ToolBar.Resources>
-				<Style TargetType="{x:Type Image}">
-					<Style.Triggers>
-						<DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type ButtonBase}, AncestorLevel=1}, Path=IsEnabled}" Value="False">
-							<Setter Property="Opacity" Value="0.30" />
-						</DataTrigger>
-					</Style.Triggers>
-				</Style>
-			</ToolBar.Resources>
-            <Button Click="openFileClick" Padding="3" Margin="2,0">
+	Title="Edit" Height="500" Width="700" Background="{DynamicResource GlobalBackground}" >
+    <Window.Resources>
+        <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource TextBox.Small}">
+            <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="ToolTip" Value="{ Binding Text,RelativeSource={RelativeSource Self}}"/>
+        </Style>
+        <Style TargetType="{x:Type TextBlock}" >
+            <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+    </Window.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <ToolBar DockPanel.Dock="Top" Margin="5,0,5,0">
+            <ToolBar.Resources>
+                <Style TargetType="{x:Type Image}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type ButtonBase}, AncestorLevel=1}, Path=IsEnabled}" Value="False">
+                            <Setter Property="Opacity" Value="0.30" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ToolBar.Resources>
+            <Button Click="openFileClick" Padding="3" Margin="2,0" Background="Transparent" BorderThickness="0">
                 <Viewbox>
                     <Rectangle Fill="{StaticResource  DIOpen}" Width="16" Height="16"/>
                 </Viewbox>
             </Button>
-            <Button Click="saveFileClick" Padding="3" Margin="2,0">
+            <Button Click="saveFileClick" Padding="3" Margin="2,0" Background="Transparent" BorderThickness="0">
                 <Viewbox>
-                    <Rectangle Fill="{StaticResource DISave}" Width="16" Height="16"/>
+                    <Rectangle Fill="{DynamicResource DISave}" Width="16" Height="16"/>
                 </Viewbox>
             </Button>
-			<Separator/>
-            <Button Command="Cut" Padding="3" Margin="2,0">
+            <Separator/>
+            <Button Command="Cut" Padding="3" Margin="2,0" Background="Transparent" BorderThickness="0">
                 <Viewbox>
-                    <Rectangle Fill="{StaticResource DICut}" Width="16" Height="16"/>
-                </Viewbox>
-			</Button>
-            <Button Command="Copy"  Padding="3" Margin="2,0">
-                <Viewbox>
-                    <Rectangle Fill="{StaticResource DICopy}" Width="16" Height="16"/>
-                </Viewbox>			
-            </Button>
-            <Button Command="Paste" Padding="3" Margin="2,0">
-                <Viewbox>
-                    <Rectangle Fill="{StaticResource DIPaste}" Width="16" Height="16"/>
+                    <Rectangle Fill="{DynamicResource DICut}" Width="16" Height="16"/>
                 </Viewbox>
             </Button>
-            <Button Command="Delete" Padding="3" Margin="2,0">
+            <Button Command="Copy"  Padding="3" Margin="2,0" Background="Transparent" BorderThickness="0">
                 <Viewbox>
-                    <Rectangle Fill="{StaticResource DIDelete}" Width="16" Height="16"/>
-                </Viewbox>			
-            </Button>
-			<Separator/>
-            <Button Command="Undo" Padding="3" Margin="2,0">
-                <Viewbox>
-                    <Rectangle Fill="{StaticResource DIUndo}" Width="16" Height="16"/>
+                    <Rectangle Fill="{DynamicResource DICopy}" Width="16" Height="16"/>
                 </Viewbox>
             </Button>
-            <Button Command="Redo" Padding="3" Margin="2,0">
+            <Button Command="Paste" Padding="3" Margin="2,0" Background="Transparent" BorderThickness="0">
                 <Viewbox>
-                    <Rectangle Fill="{StaticResource DIRedo}" Width="16" Height="16"/>
-                </Viewbox>			
+                    <Rectangle Fill="{DynamicResource DIPaste}" Width="16" Height="16"/>
+                </Viewbox>
             </Button>
-			<Separator/>
-			<CheckBox IsChecked="{Binding ElementName=textEditor,Path=WordWrap}">
+            <Button Command="Delete" Padding="3" Margin="2,0" Background="Transparent" BorderThickness="0">
+                <Viewbox>
+                    <Rectangle Fill="{DynamicResource DIDelete}" Width="16" Height="16"/>
+                </Viewbox>
+            </Button>
+            <Separator/>
+            <Button Command="Undo" Padding="3" Margin="2,0" Background="Transparent" BorderThickness="0">
+                <Viewbox>
+                    <Rectangle Fill="{DynamicResource DIUndo}" Width="16" Height="16"/>
+                </Viewbox>
+            </Button>
+            <Button Command="Redo" Padding="3" Margin="2,0" Background="Transparent" BorderThickness="0">
+                <Viewbox>
+                    <Rectangle Fill="{DynamicResource DIRedo}" Width="16" Height="16"/>
+                </Viewbox>
+            </Button>
+            <Separator/>
+            <CheckBox IsChecked="{Binding ElementName=textEditor,Path=WordWrap}" Margin="2,0">
                 <Viewbox  Width="16" Height="16">
-                    <Rectangle Fill="{StaticResource DIWordWrap}" Width="16" Height="16"/>
+                    <Rectangle Fill="{DynamicResource DIWordWrap}" Width="16" Height="16"/>
                 </Viewbox>
             </CheckBox>
-			<CheckBox IsChecked="{Binding ElementName=textEditor,Path=ShowLineNumbers}">
-				<TextBlock Width="16" TextAlignment="Center">#</TextBlock>
-			</CheckBox>
-			<CheckBox IsChecked="{Binding ElementName=textEditor,Path=Options.ShowEndOfLine}">
-				<TextBlock Width="16" TextAlignment="Center">¶</TextBlock>
-			</CheckBox>
-			<ComboBox Name="highlightingComboBox"
+            <CheckBox IsChecked="{Binding ElementName=textEditor,Path=ShowLineNumbers}"  Margin="2,0">
+                <TextBlock Width="16" TextAlignment="Center">#</TextBlock>
+            </CheckBox>
+            <CheckBox IsChecked="{Binding ElementName=textEditor,Path=Options.ShowEndOfLine}">
+                <TextBlock Width="16" TextAlignment="Center">¶</TextBlock>
+            </CheckBox>
+            <ComboBox Name="highlightingComboBox" Background="Transparent" BorderThickness="0"
 				SelectedItem="{Binding SyntaxHighlighting, ElementName=textEditor}"
 				ItemsSource="{Binding Source={x:Static avalonEdit:HighlightingManager.Instance}, Path=HighlightingDefinitions}"
 				SelectionChanged="HighlightingComboBox_SelectionChanged"/>
-		</ToolBar>
-		<Grid>
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="1*"/>
-			</Grid.ColumnDefinitions>
-            <avalonEdit:TextEditor Name="textEditor" FontFamily="Consolas"	FontSize="10pt" SyntaxHighlighting="C#" Margin="5"	/>
+        </ToolBar>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <avalonEdit:TextEditor Name="textEditor" Background="Transparent" FontFamily="Consolas" ShowLineNumbers="True" FontSize="10pt" SyntaxHighlighting="C#" />
 
         </Grid>
-	</DockPanel>
+        <StackPanel Grid.Row="2" Name="StatusBar"  Height="20" DockPanel.Dock="Bottom" Orientation="Horizontal">
+            <TextBlock Name="StatusText" Text="Ready" Margin="5 0 0 0" VerticalAlignment="Center" FontSize="12"/>
+        </StackPanel>
+
+    </Grid>
 </Window>
