--- a/UI/ColorVision.Solution/Searches/SolutionView.xaml
+++ b/UI/ColorVision.Solution/Searches/SolutionView.xaml
@@ -8,12 +8,15 @@
              x:Class="ColorVision.Solution.Searches.SolutionView"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock"
+             xmlns:avalonDockControls="http://schemas.xceed.com/wpf/xaml/avalondock"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="{DynamicResource GlobalBackground}" Initialized="UserControl_Initialized" >
     <UserControl.Resources>
         <!--<Style TargetType="TextBlock" >
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}" />
         </Style>-->
+        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="#FFFFA500"/>
+        <SolidColorBrush x:Key="{x:Static SystemColors.ControlDarkBrushKey}" Color="#FF008000"/>
         <DataTemplate x:Key="DocumentHeaderTemplate">
             <StackPanel Orientation="Horizontal">
                 <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding Title}" Foreground="{DynamicResource GlobalTextBrush}" />
@@ -25,13 +28,68 @@
                 <Setter Property="Background" Value="Red"/>
             </Style.Setters>
         </Style>
+        <Style x:Key="DocumentPaneControlStyle" TargetType="{x:Type avalonDockControls:LayoutDocumentPaneControl}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type avalonDockControls:LayoutDocumentPaneControl}">
+                        <Grid ClipToBounds="true" SnapsToDevicePixels="true" KeyboardNavigation.TabNavigation="Local">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Border Background="Red" Grid.RowSpan="2" />
+                            <Grid ZIndex="1" Visibility="{Binding Path=Model.ShowHeader, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type avalonDockControls:LayoutDocumentPaneControl}}, Converter={StaticResource BoolToVisibilityConverter}}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <avalonDockControls:DocumentPaneTabPanel x:Name="HeaderPanel" Grid.Column="0" IsItemsHost="true" Grid.Row="0" KeyboardNavigation.TabIndex="1" KeyboardNavigation.DirectionalNavigation="Cycle" />
+                                <avalonDockControls:DropDownButton x:Name="MenuDropDownButton" Style="{DynamicResource {x:Static ToolBar.ToggleButtonStyleKey}}" Focusable="False" Grid.Column="1">
+                                    <avalonDockControls:DropDownButton.DropDownContextMenu>
+                                        <avalonDockControls:ContextMenuEx ItemsSource="{Binding Model.ChildrenSorted, RelativeSource={RelativeSource TemplatedParent}}">
+                                            <ItemsControl.ItemContainerStyle>
+                                                <Style TargetType="{x:Type avalonDockControls:MenuItemEx}" BasedOn="{StaticResource {x:Type MenuItem}}">
+                                                    <Setter Property="HeaderTemplate" Value="{Binding Path=Root.Manager.DocumentPaneMenuItemHeaderTemplate}" />
+                                                    <Setter Property="HeaderTemplateSelector" Value="{Binding Path=Root.Manager.DocumentPaneMenuItemHeaderTemplateSelector}" />
+                                                    <Setter Property="avalonDockControls:MenuItemEx.IconTemplate" Value="{Binding Path=Root.Manager.IconContentTemplate}" />
+                                                    <Setter Property="avalonDockControls:MenuItemEx.IconTemplateSelector" Value="{Binding Path=Root.Manager.IconContentTemplateSelector}" />
+                                                    <Setter Property="MenuItem.Command" Value="{Binding Path=., Converter={StaticResource ActivateCommandLayoutItemFromLayoutModelConverter}}" />
+                                                </Style>
+                                            </ItemsControl.ItemContainerStyle>
+                                        </avalonDockControls:ContextMenuEx>
+                                    </avalonDockControls:DropDownButton.DropDownContextMenu>
+                                    <Border Background="Red">
+                                        <Image>
+                                            <Image.Source>
+                                                <core:ImageUriExtension xmlns:core="clr-namespace:Xceed.Wpf.Toolkit.Core;assembly=Xceed.Wpf.Toolkit" core:PackUriExtension.AssemblyName="Xceed.Wpf.AvalonDock" core:PackUriExtension.Path="Themes/Generic/Images/PinDocMenu.png" />
+                                            </Image.Source>
+                                        </Image>
+                                    </Border>
+                                </avalonDockControls:DropDownButton>
+                            </Grid>
+                            <Border Name="ContentPanel" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" BorderBrush="{TemplateBinding Control.BorderBrush}" BorderThickness="{TemplateBinding Control.BorderThickness}" Background="Violet" Grid.Column="0" KeyboardNavigation.DirectionalNavigation="Contained" Grid.Row="1" KeyboardNavigation.TabIndex="2" KeyboardNavigation.TabNavigation="Cycle">
+                                <ContentPresenter Name="PART_SelectedContentHost" ContentSource="SelectedContent" Margin="{TemplateBinding Control.Padding}" SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
+                            </Border>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" Property="Foreground" />
+                            </Trigger>
+                            <DataTrigger Value="0" Binding="{Binding Path=Model.ChildrenCount, RelativeSource={RelativeSource Mode=Self}}">
+                                <Setter TargetName="MenuDropDownButton" Property="Visibility" Value="Collapsed" />
+                            </DataTrigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </UserControl.Resources>
     <Grid>
-        <xcad:DockingManager BorderThickness="0" DocumentHeaderTemplate="{StaticResource DocumentHeaderTemplate}" Background="Transparent" Theme="{Binding ElementName=_themeCombo, Path=SelectedItem.Tag}" Padding="0" Margin="0">
-            <xcad:LayoutRoot x:Name="_layoutRoot" >
-                <xcad:LayoutPanel Orientation="Horizontal" >
+        <xcad:DockingManager BorderThickness="0" DocumentPaneControlStyle="{StaticResource DocumentPaneControlStyle}"  DocumentHeaderTemplate="{StaticResource DocumentHeaderTemplate}" Background="{DynamicResource GlobalBackground}"  Theme="{Binding ElementName=_themeCombo, Path=SelectedItem.Tag}" Padding="0" Margin="0">
+            <xcad:LayoutRoot x:Name="_layoutRoot"  >
+                <xcad:LayoutPanel Orientation="Horizontal"  >
                     <xcad:LayoutDocumentPaneGroup>
-                        <xcad:LayoutDocumentPane x:Name="LayoutDocumentPane">
+                        <xcad:LayoutDocumentPane x:Name="LayoutDocumentPane"  >
                         </xcad:LayoutDocumentPane>
                     </xcad:LayoutDocumentPaneGroup>
                 </xcad:LayoutPanel>
