--- a/UI/ColorVision.Solution/Searches/SolutionView.xaml
+++ b/UI/ColorVision.Solution/Searches/SolutionView.xaml
@@ -7,7 +7,7 @@
              xmlns:hc ="https://handyorg.github.io/handycontrol"
              x:Class="ColorVision.Solution.Searches.SolutionView"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock"
+             xmlns:xcad="https://github.com/Dirkster99/AvalonDock"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="{DynamicResource GlobalBackground}" Initialized="UserControl_Initialized" >
     <UserControl.Resources>
@@ -27,7 +27,7 @@
         </Style>
     </UserControl.Resources>
     <Grid>
-        <xcad:DockingManager BorderThickness="0" DocumentHeaderTemplate="{StaticResource DocumentHeaderTemplate}" Background="Transparent" Theme="{Binding ElementName=_themeCombo, Path=SelectedItem.Tag}" Padding="0" Margin="0">
+        <xcad:DockingManager x:Name="DockingManager1" BorderThickness="0" Background="Transparent" Padding="0" Margin="0">
             <xcad:LayoutRoot x:Name="_layoutRoot" >
                 <xcad:LayoutPanel Orientation="Horizontal" >
                     <xcad:LayoutDocumentPaneGroup>
@@ -37,26 +37,5 @@
                 </xcad:LayoutPanel>
             </xcad:LayoutRoot>
         </xcad:DockingManager>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,2,45,0" >
-            <ComboBox x:Name="_themeCombo" SelectedIndex="0" Width="100" BorderThickness="0"   VerticalAlignment="Center">
-                <ComboBoxItem Content="Generic" />
-                <ComboBoxItem Content="Aero">
-                    <ComboBoxItem.Tag>
-                        <xcad:AeroTheme/>
-                    </ComboBoxItem.Tag>
-                </ComboBoxItem>
-                <ComboBoxItem Content="VS2010">
-                    <ComboBoxItem.Tag>
-                        <xcad:VS2010Theme />
-                    </ComboBoxItem.Tag>
-                </ComboBoxItem>
-                <ComboBoxItem Content="Metro">
-                    <ComboBoxItem.Tag>
-                        <xcad:MetroTheme />
-                    </ComboBoxItem.Tag>
-                </ComboBoxItem>
-            </ComboBox>
-        </StackPanel>
-
     </Grid>
 </UserControl>
