--- a/Engine/ColorVision.Engine/Services/Devices/CfwPort/EditCfwPort.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/CfwPort/EditCfwPort.xaml
@@ -22,37 +22,11 @@
         </Grid.RowDefinitions>
         <ScrollViewer x:Name="EditContent" d:DataContext="{d:DesignInstance local:ConfigCfwPort}" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
             <Border Background ="{DynamicResource GlobalBackground}" CornerRadius="5">
-                <StackPanel >
-                    <GroupBox Header="资源信息" >
-                        <StackPanel Margin="5">
-                            <DockPanel Margin="0,0,0,5">
-                                <TextBlock Text="界面展示名称" Width="120"/>
-                                <TextBox Text="{Binding Name}" Style="{StaticResource TextBox.Small}"/>
-                            </DockPanel>
-                            <DockPanel Margin="0,0,0,5">
-                                <TextBlock Text="心跳时间"  Width="120"/>
-                                <TextBox Text="{Binding HeartbeatTime}" Style="{StaticResource TextBox.Small}"/>
-                            </DockPanel>
-                            <DockPanel Margin="0,0,0,0" >
-                                <TextBlock Text="SN" Width="120"/>
-                                <hc:ComboBox  x:Name="CameraPhyID" IsEditable="True" SelectedIndex="0" Style="{StaticResource ComboBox.Small}" Text="{Binding SN}" hc:InfoElement.ShowClearButton="True"  />
-                            </DockPanel>
-
-                        </StackPanel>
-                    </GroupBox>
-
-                    <GroupBox Header="资源信息" >
-                        <StackPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="串口:" Width="120"/>
-                                <hc:ComboBox  x:Name="ComboBoxPort" IsEditable="True" Text="{Binding SzComName}"  hc:InfoElement.ShowClearButton="True" Margin="0,0,10,0"  />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="波特率:" Width="120"/>
-                                <hc:ComboBox  x:Name="ComboBoxBaudRates" IsEditable="True" Text="{Binding BaudRate}"  hc:InfoElement.ShowClearButton="True" Margin="0,0,10,0"  />
-                            </DockPanel>
-                        </StackPanel>
-                    </GroupBox>
+                <StackPanel x:Name="EditStackPanel" Margin="5,0">
+                    <DockPanel Margin="0,0,0,0" >
+                        <TextBlock Text="SN" Width="120"/>
+                        <hc:ComboBox  x:Name="CameraPhyID" IsEditable="True" SelectedIndex="0" Style="{StaticResource ComboBox.Small}" Text="{Binding SN}" hc:InfoElement.ShowClearButton="True"  />
+                    </DockPanel>
 
                 </StackPanel>
             </Border>
