--- a/Projects/ProjectARVR/ARVRWindow.xaml
+++ b/Projects/ProjectARVR/ARVRWindow.xaml
@@ -1,11 +1,13 @@
-﻿<Window xmlns:LogImp="clr-namespace:ColorVision.UI.LogImp;assembly=ColorVision.UI"  x:Class="ProjectARVR.ARVRWindow"
+﻿<Window x:Class="ProjectARVR.ARVRWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:im="clr-namespace:ColorVision.ImageEditor;assembly=ColorVision.ImageEditor"
         xmlns:local="clr-namespace:ProjectARVR"
-        xmlns:properties ="clr-namespace:ProjectARVR.Properties" xmlns:hc="https://handyorg.github.io/handycontrol"
+        xmlns:properties ="clr-namespace:ProjectARVR.Properties" 
+        xmlns:hc="https://handyorg.github.io/handycontrol"
+        xmlns:LogImp="clr-namespace:ColorVision.UI.LogImp;assembly=ColorVision.UI"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:ProjectARVRConfig}"
         Title="ARVR检测" Height="720" Width="1280" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized" >
