--- a/Projects/ProjectBlackMura/MainWindow.xaml
+++ b/Projects/ProjectBlackMura/MainWindow.xaml
@@ -141,7 +141,7 @@
                                 <TextBox x:Name="SNtextBox" Text="{Binding SN,UpdateSourceTrigger=PropertyChanged}" Width="140" FontFamily="Courier New"  AcceptsReturn="True" Style="{StaticResource TextBoxBaseStyle}"  PreviewKeyDown="SNtextBox_PreviewKeyDown"/>
                             </DockPanel>
                         </DockPanel>
-                        <Button Content="Test BlackMura"  DockPanel.Dock="Right" Background="Pink" Height="70" Click="TestClick" />
+                        <Button Content="Single Test "  DockPanel.Dock="Right" Background="Pink" Click="TestClick" />
                         <Button Content="Test All"  DockPanel.Dock="Right" Background="Pink"  Click="Test1_Click" />
 
                     </StackPanel>
